--- a/gfx/PAGfx.ini
+++ b/gfx/PAGfx.ini
@@ -1,6 +1,10 @@
 #TranspColor Magenta
 
 #Sprites :
+joueur_d.bmp 256colors joueur_d
+joueur_g.bmp 256colors joueur_g
+joueur_h.bmp 256colors joueur_h
+joueur_b.bmp 256colors joueur_b
 
 #Backgrounds :
 demarrage_bas.bmp 16bit None
