--- a/gfx/PAGfx.ini
+++ b/gfx/PAGfx.ini
@@ -21,5 +21,7 @@ pacman.bmp 256colors pacman
 #Backgrounds :
 demarrage_bas.bmp 16bit None
 demarrage_haut.bmp 16bit None
+jeux_bas.bmp 16bit None
+jeux_haut.bmp 16bit None
 
 #Textures :
