--- a/gfx/PAGfx.ini
+++ b/gfx/PAGfx.ini
@@ -23,5 +23,7 @@ demarrage_bas.bmp 16bit None
 demarrage_haut.bmp 16bit None
 jeux_bas.bmp 16bit None
 jeux_haut.bmp 16bit None
+about.png 16bit None
+controls.png 16bit None
 
 #Textures :
