--- a/gfx/PAGfx.ini
+++ b/gfx/PAGfx.ini
@@ -25,5 +25,6 @@ jeux_bas.bmp 16bit None
 jeux_haut.bmp 16bit None
 about.png 16bit None
 controls.png 16bit None
+Entete.bmp 16bit None
 
 #Textures :
